package com.plcoding.cleanarchitecturenoteapp.core.util

object TestTags {

   const val ORDER_SECTION = "ORDER_SECTION"
   const val TITLE_TEXT_FIELD = "TITLE_TEXT_FIELD"
   const val CONTEXT_TEXT_FIELD = "CONTEXT_TEXT_FIELD"
   const val NOTE_ITEM = "NOTE_ITEM"
}